added html and some sass

--- a/index.html
+++ b/index.html
@@ -4,7 +4,223 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=7" />
-    <title>Document</title>
+    <title>MyAnimeList.net</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/c9928e88cc.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="#" class="logo"><span>MAL</span></a>
+        <!-- Contains the sign up and hide ads button -->
+        <ul>
+          <li><a href="#" class="hide-ads">Hide Ads</a></li>
+          <li><a href="#" class="sign-up">Sign Up</a></li>
+          <li><i class="fas fa-search"></i></li>
+          <li><i class="fas fa-bars"></i></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <div class="announcement-container">
+        <div class="section-header">
+          <h3>Announcement</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="info-box-container">
+          <div class="info-box">
+            <a href="#">
+              <div>
+                <h2 class="info-title">
+                  Two-Factor Authentication: Increase the security of your
+                  account
+                </h2>
+                <p class="info-details">
+                  Dec 7, 8:50 PM by Kineta <i class="far fa-comment"></i> 56
+                  replies
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="latest-news-container">
+        <div class="section-header">
+          <h3>Latest News</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="info-box-container">
+          <div class="info-box">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/70x70/s/common/uploaded_files/1607902590-c39037a2fa3437b63bbadf86b25e29e9.jpeg?s=ab3f56e65f47defa84d110b6ea7b281b"
+                  alt=""
+                />
+              </span>
+              <div class="i-block pos-top">
+                <h2 class="info-title">PV Collection for Dec 7 - 13</h2>
+                <p class="info-details">
+                  Yesterday, 3:38 PM by Snow <i class="far fa-comment"></i> 2
+                  comments
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="fall-anime-container">
+        <div class="section-header">
+          <h3>Fall 2020 Anime</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel">
+          <div class="carousel-item i-block">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/90x126/images/anime/1171/109222.webp?s=f1df3a45dc33087fcd51e38cda0c2bb1"
+                  alt=""
+                />
+              </span>
+              <p>Jujutsu Kaisen Tv</p>
+            </a>
+            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="most-popular-container">
+        <div class="section-header">
+          <h3>Most Popular Anime</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel">
+          <div class="carousel-item i-block">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/90x126/images/anime/9/9453.webp?s=49fb9c86b390f588009935b77ab71d8a"
+                  alt=""
+                />
+              </span>
+              <p>Death Note</p>
+            </a>
+            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="top-airing-container">
+        <div class="section-header">
+          <h3>Top Airing Anime</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel">
+          <div class="carousel-item i-block">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/90x126/images/anime/1000/110531.webp?s=dc479e2793fbb0972a0358add150d568"
+                  alt=""
+                />
+              </span>
+              <p>Shingeki no Kyojin The Final Season</p>
+            </a>
+            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="most-fav-container">
+        <div class="section-header">
+          <h3>Most Favorited Characters</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel">
+          <div class="carousel-item i-block">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/180x252/images/characters/4/277146.webp?s=b65a7356f8b6690c68381a600578111d"
+                  alt=""
+                />
+              </span>
+              <p>Lelouch Lamperouge</p>
+            </a>
+            <a href="#" class="like"></a>
+            <span>132,194 users</span>
+          </div>
+        </div>
+      </div>
+      <div class="popular-people-container">
+        <div class="section-header">
+          <h3>Popular People</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="carousel">
+          <div class="carousel-item i-block">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/180x252/images/voiceactors/3/57913.jpg?s=a6ba9eac39acb27c3ec5f379bc6fed61"
+                  alt=""
+                />
+              </span>
+              <p>Kana Hanazawa</p>
+            </a>
+            <a href="#" class="like"></a>
+            <span>88,447 users</span>
+          </div>
+        </div>
+      </div>
+      <div class="discussion-container">
+        <div class="section-header">
+          <h3>Recent Anime Discussion</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="info-box-container">
+          <div class="info-box">
+            <a href="#">
+              <div class="i-block">
+                <h2 class="info-title">
+                  Who's your LEAST favorite female character from MAL top 10
+                  popularity?
+                </h2>
+                <p class="info-details">
+                  Dec 7,8:50 PM by A_G_N <i class="far fa-comment"></i> 81
+                  replies
+                </p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="articles-container">
+        <div class="section-header">
+          <h3>Featured Articles</h3>
+          <a href="#">More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div class="info-box-container">
+          <div class="info-box">
+            <a href="#">
+              <span>
+                <img
+                  src="https://cdn.myanimelist.net/r/140x140/s/common/uploaded_files/1607258059-3496417e47772940290d84beaeab7538.jpeg?s=c8d22ab4019a3f3865fe7497f4ff3dba"
+                  alt=""
+                  class="img-sm"
+                />
+              </span>
+              <div class="i-block pos-top">
+                <h2 class="info-title">
+                  The Winter 2021 Seasonal Catch-up Guide
+                </h2>
+                <p class="info-details">by Shymander | 16,805 views</p>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
