added style to more items

--- a/index.html
+++ b/index.html
@@ -78,17 +78,19 @@
           <a href="#">More <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="carousel">
-          <div class="carousel-item i-block">
-            <a href="#">
-              <span>
-                <img
-                  src="https://cdn.myanimelist.net/r/90x126/images/anime/1171/109222.webp?s=f1df3a45dc33087fcd51e38cda0c2bb1"
-                  alt=""
-                />
-              </span>
-              <p>Jujutsu Kaisen Tv</p>
-            </a>
-            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          <div class="carousel-viewport">
+            <div class="carousel-item i-block">
+              <a href="#">
+                <span>
+                  <img
+                    src="https://cdn.myanimelist.net/r/90x126/images/anime/1171/109222.webp?s=f1df3a45dc33087fcd51e38cda0c2bb1"
+                    alt=""
+                  />
+                </span>
+                <p>Jujutsu Kaise...</p>
+              </a>
+              <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -98,17 +100,19 @@
           <a href="#">More <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="carousel">
-          <div class="carousel-item i-block">
-            <a href="#">
-              <span>
-                <img
-                  src="https://cdn.myanimelist.net/r/90x126/images/anime/9/9453.webp?s=49fb9c86b390f588009935b77ab71d8a"
-                  alt=""
-                />
-              </span>
-              <p>Death Note</p>
-            </a>
-            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          <div class="carousel-viewport">
+            <div class="carousel-item i-block">
+              <a href="#">
+                <span>
+                  <img
+                    src="https://cdn.myanimelist.net/r/90x126/images/anime/9/9453.webp?s=49fb9c86b390f588009935b77ab71d8a"
+                    alt=""
+                  />
+                </span>
+                <p>Death Note</p>
+              </a>
+              <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -118,17 +122,19 @@
           <a href="#">More <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="carousel">
-          <div class="carousel-item i-block">
-            <a href="#">
-              <span>
-                <img
-                  src="https://cdn.myanimelist.net/r/90x126/images/anime/1000/110531.webp?s=dc479e2793fbb0972a0358add150d568"
-                  alt=""
-                />
-              </span>
-              <p>Shingeki no Kyojin The Final Season</p>
-            </a>
-            <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+          <div class="carousel-viewport">
+            <div class="carousel-item i-block">
+              <a href="#">
+                <span>
+                  <img
+                    src="https://cdn.myanimelist.net/r/90x126/images/anime/1000/110531.webp?s=dc479e2793fbb0972a0358add150d568"
+                    alt=""
+                  />
+                </span>
+                <p>Shingeki no ...</p>
+              </a>
+              <a href="#" class="add-to-list"><i class="fas fa-plus"></i></a>
+            </div>
           </div>
         </div>
       </div>
@@ -138,18 +144,21 @@
           <a href="#">More <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="carousel">
-          <div class="carousel-item i-block">
-            <a href="#">
-              <span>
-                <img
-                  src="https://cdn.myanimelist.net/r/180x252/images/characters/4/277146.webp?s=b65a7356f8b6690c68381a600578111d"
-                  alt=""
-                />
-              </span>
-              <p>Lelouch Lamperouge</p>
-            </a>
-            <a href="#" class="like"></a>
-            <span>132,194 users</span>
+          <div class="carousel-viewport">
+            <div class="carousel-item i-block">
+              <a href="#">
+                <span>
+                  <img
+                    src="https://cdn.myanimelist.net/r/180x252/images/characters/4/277146.webp?s=b65a7356f8b6690c68381a600578111d"
+                    alt=""
+                    class="img-med"
+                  />
+                </span>
+                <p>Lelouch Lam...</p>
+              </a>
+              <a href="#" class="like"><i class="fas fa-heart"></i></a>
+              <span class="user-count">132,194 users</span>
+            </div>
           </div>
         </div>
       </div>
@@ -159,18 +168,21 @@
           <a href="#">More <i class="fas fa-chevron-right"></i></a>
         </div>
         <div class="carousel">
-          <div class="carousel-item i-block">
-            <a href="#">
-              <span>
-                <img
-                  src="https://cdn.myanimelist.net/r/180x252/images/voiceactors/3/57913.jpg?s=a6ba9eac39acb27c3ec5f379bc6fed61"
-                  alt=""
-                />
-              </span>
-              <p>Kana Hanazawa</p>
-            </a>
-            <a href="#" class="like"></a>
-            <span>88,447 users</span>
+          <div class="carousel-viewport">
+            <div class="carousel-item i-block">
+              <a href="#">
+                <span>
+                  <img
+                    src="https://cdn.myanimelist.net/r/180x252/images/voiceactors/3/57913.jpg?s=a6ba9eac39acb27c3ec5f379bc6fed61"
+                    alt=""
+                    class="img-med"
+                  />
+                </span>
+                <p>Kana Hanaza...</p>
+              </a>
+              <a href="#" class="like"><i class="fas fa-heart"></i></a>
+              <span class="user-count">88,447 users</span>
+            </div>
           </div>
         </div>
       </div>
@@ -182,7 +194,7 @@
         <div class="info-box-container">
           <div class="info-box">
             <a href="#">
-              <div class="i-block">
+              <div>
                 <h2 class="info-title">
                   Who's your LEAST favorite female character from MAL top 10
                   popularity?
