--- a/index.html
+++ b/index.html
@@ -234,5 +234,53 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="foot-nav-container">
+      <div class="foot-nav">
+        <ul>
+          <li><a href="#">Advertising</a></li>
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+        <ul>
+          <li><a href="#">Cookie</a></li>
+          <li><a href="#">Notice at Collection</a></li>
+        </ul>
+      </div>
+    </div>
+      <div class="support-mal">
+        <img
+          src="https://cdn.myanimelist.net/images/event/support_mal/banner-ani-500x72.gif"
+          alt="support myanimelist"
+        />
+      </div>
+      <div class="socials">
+        <div class="facebook i-block">
+          <a href="#"><i class="fab fa-facebook-square"></i> Facebook</a>
+        </div>
+        <div class="twitter i-block">
+          <a href="#"><i class="fab fa-twitter-square"></i> Twitter<a/>
+        </div>
+      </div>
+      <div class="rec-sites">
+        <ul>
+          <li><a href="#">Tokyo Otaku Mode</a></li>
+          <li><a href="#">Honey's Anime</a></li>
+          <li><a href="#">Manga Store</a></li>
+        </ul>
+        <p>Recommended Site</p>
+      </div>
+      <div class="req-desktop">
+        <a href="#"><i class="fas fa-desktop"></i> Request Desktop Site</a>
+      </div>
+      <div class="copy-right">
+        &copy;2020 MyAnimeList Co.,Ltd.,All Rights Reserved
+      </div>
+    </footer>
   </body>
 </html>
